# webx

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test.html  vercel.json
api/: Cargo.toml  counter.rs  home.rs  projects.rs  prose.rs  root.rs  search.rs
api/content/: [id].rs
api/prose/: [id].rs  search.rs
api/root/: [id].rs
src/: home.html  index.html  input.css  lib.rs  models.rs  processor.rs  projects.html  projects.json  prose.html  prose.json  router.rs  routes.rs  scripts.js  toggle.js
src/projects/: cyou.org  demonsend.org  marigolds.org  nomissmayhem.org  template.org  website.org  wyroam.org
src/prose/: 2023-06-25.org  2023-06-26.org  2024-10-08.org  2024-10-09.org  2024-10-17.org  2024-10-18.org  2024-10-19.org  2024-10-20.org  2024-10-21.org  2024-10-22.org  2024-11-27.org  confirmity.org  delta.org  exms.org  fat.org  goodluck.org  marigolds.org  memories.org  pickles.org  reso.org  sepia.org  sts.org  summer.org  sun.org  szns.org  things.org  tick.org  weed.org  writing.org
templates/: base.html  index.html  output.css  styles.css
