[package]
name = "webx_api"
version = "0.1.0"
edition = "2021"
publish=false

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }

# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1" }
http = "1.1.0"
hypertext = "0.5.2"
serde = { version = "1.0.215", features = ["derive"] }
orgize = "0.10.0-alpha.10"
anyhow = "1.0.93"
ureq = "2.11.0"
url = "2.5.4"
fuzzy-matcher = "0.3.7"

# You can specify a library for shared here
[lib]
path = "src/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "root"
path = "api/root.rs"

[[bin]]
name = "home"
path = "api/home.rs"

[[bin]]
name = "prose"
path = "api/prose.rs"

[[bin]]
name = "projects"
path = "api/projects.rs"

[[bin]]
name = "search"
path = "api/search.rs"

[[bin]]
name = "proseid"
path = "api/prose/[id].rs"

[[bin]]
name = "rootid"
path = "api/root/[id].rs"

[[bin]]
name = "processor"
path = "src/processor.rs"

